Trabajo -Felipphe Triviño'- Día 04-09-2013 (WAR)

--- a/DesignerRHN/DesignerRHN-war/web/EmplVigenciaTipoContrato.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplVigenciaTipoContrato.xhtml
@@ -85,7 +85,7 @@
                                         <f:facet name="input">
                                             <p:calendar  style="font-size: 10px;" value="#{info.fechavigencia}" id="editFecha"   styleClass="ui-datepicker, myClass"  
                                                          navigator="true" showButtonPanel="true" locale="es" pattern="dd/MM/yyyy" autocomplete="true">                                         
-                                                <p:ajax event="dateSelect" listener="#{controlVigenciasTiposContratos.modificarVTC(indice, 'N')}" update="editFecha"/>
+                                                <p:ajax event="dateSelect" listener="#{controlVigenciasTiposContratos.modificarVTC(indice, 'N', info.fechavigencia)}" update="editFecha"/>
                                                 <p:ajax event="change" listener="#{controlVigenciasTiposContratos.modificarVTC(indice, 'N')}" />
                                                 <p:ajax event="select" listener="#{controlVigenciasTiposContratos.cambiarIndice(indice, '0')}" />
                                                 <f:convertDateTime pattern="dd/MM/yyyy" />
