--- a/DesignerRHN/DesignerRHN-war/web/Template.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/Template.xhtml
@@ -16,6 +16,17 @@
     <h:body>
         <div id="top"  class="top" style="background-image: url(Imagenes/fondoencabezado.png); height: 80px; background-repeat: no-repeat; background-size: 100% 100%;">
             <ui:insert name="banner">
+                <h:form>
+                    <p:dock position="top" >  
+                        <p:menuitem value="Home" icon="Imagenes/guardar.jpg" url="#"/>  
+                        <p:menuitem value="Music" icon="Imagenes/editar.jpg" url="#"/>  
+                        <p:menuitem value="Video" icon="Imagenes/lupa.png" url="#"/>  
+                        <p:menuitem value="Email" icon="Imagenes/excel.png" url="#"/>  
+                        <p:menuitem value="Portfolio" icon="Imagenes/XML.jpg" url="#"/>  
+                        <p:menuitem value="Link" icon="Imagenes/pdf.jpg" url="#"/>  
+                        <p:menuitem value="RSS" icon="Imagenes/rastro.jpg" url="#"/>
+                    </p:dock> 
+                </h:form>
             </ui:insert>
         </div>
         <div>
@@ -37,7 +48,7 @@
                 </ui:insert>
             </div>
             <div id="content" class="left_content">
-                    <ui:insert name="body" />
+                <ui:insert name="body" />
             </div>
         </div>
     </h:body>
