--- a/DesignerRHN/DesignerRHN-war/web/PruebasUnitariasComponentes.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/PruebasUnitariasComponentes.xhtml
@@ -5,21 +5,107 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://java.sun.com/jsf/core">
     <h:head>
+        <style>
+            .hide-column-names table thead tr {
+                display: none;
+            }
+
+            .hide-row-names table td {
+                display: none;
+            }
+        </style>
+        <script type="text/javascript">
+            function initScroll() {
+                var leftDiv = document.getElementById('d');
+                var rightDiv = document.getElementById('d2');
+                var topDiv = document.getElementById('d3');
+                rightDiv.onscroll = function() {
+                    leftDiv.scrollTop = rightDiv.scrollTop;
+                    topDiv.scrollLeft = rightDiv.scrollLeft;
+                };
+                leftDiv.onscroll = function() {
+                    rightDiv.scrollTop = leftDiv.scrollTop;
+                };
+            }
+        </script>
     </h:head> 
-    <h:body>
+    <h:body onload="initScroll();">
         <h:form id="form">
-            <p:focus for=":form:tablaEjemplo:input3" />
-            <p:commandButton id="superBoton" value="Asignar foco" actionListener="#{pruebaComponetesUnitarios.probarFocusDinamico()}" oncomplete="{PrimeFaces.focus('#{pruebaComponetesUnitarios.inputFoco}');}"/>
-            <p:inputText id="input1" widgetVar="input1" />
-            <p:inputText id="input2" widgetVar="input2" />
-            
-            <p:dataTable id="tablaEjemplo" value="#{pruebaComponetesUnitarios.listaPrueb}" var="item">
-                <p:column>
-                    <p:inputText id="input3" value="#{item}"/>
-                </p:column>
+
+            <p:dataTable id="data3" var="modulo" style="font-size: 11px; width: 283px; position: relative; top: 18px;" value="#{controlRemoto.listModulos}"
+                         rowKey="#{modulo.secuencia}" widgetVar="data1" styleClass="hide-row-names" emptyMessage="No se encontrarón coincidencias.">
+                <p:column id="moduloCodigo" width="50" sortBy="#{modulo.nombrecorto}"  filterBy="#{modulo.nombrecorto}" filterMatchMode="contains" filterStyle="display: none; visibility: hidden;">
+                    <f:facet name="header">  
+                        <h:outputText value="Codigo" />   
+                    </f:facet> 
+                    <h:outputText value="#{modulo.nombrecorto}" />  
+                </p:column>  
             </p:dataTable>
-            
+
+            <div id="d" style="height: 200px; width: 300px; overflow-y: scroll; position: absolute; top: 50px">
+                <p:dataTable id="data1" var="modulo" style="font-size: 11px;" value="#{controlRemoto.listModulos}"
+                             rowKey="#{modulo.secuencia}" selection="#{controlRemoto.selectModulo}" selectionMode="single"
+                             widgetVar="data1" styleClass="hide-column-names"
+                             filteredValue="#{controlRemoto.filtradolistModulos}" emptyMessage="No se encontrarón coincidencias.">
+
+                    <p:column id="moduloCodigo" width="50" sortBy="#{modulo.nombrecorto}"  filterBy="#{modulo.nombrecorto}" filterMatchMode="contains" filterStyle="display: none; visibility: hidden;">
+                        <f:facet name="header">  
+                            <h:outputText value="Codigo" />  
+                        </f:facet> 
+                        <h:outputText value="#{modulo.nombrecorto}" />  
+                    </p:column>  
+                </p:dataTable>
+            </div>
+
+            <div id="d2" style="height: 220px; width: 320px; overflow: scroll; position: absolute; left: 290px; top: 50px;" >
+                <p:dataTable id="data2" var="modulo" style="font-size: 11px; width: 600px;" value="#{controlRemoto.listModulos}"
+                             rowKey="#{modulo.secuencia}" selection="#{controlRemoto.selectModulo}" selectionMode="single"
+                             widgetVar="data1" styleClass="hide-column-names"
+                             filteredValue="#{controlRemoto.filtradolistModulos}" emptyMessage="No se encontrarón coincidencias.">
+
+                    <p:column id="moduloNombre" headerText="Nombre_Modulo" sortBy="#{modulo.nombre}" style="width: 300px" filterBy="#{modulo.nombre}" filterMatchMode="contains" filterStyle="display: none; visibility: hidden;"> 
+                        <f:facet name="header">  
+                            <h:outputText value="Nombre Módulo" />  
+                        </f:facet> 
+                        <h:outputText value="#{modulo.nombre}" />  
+                    </p:column>  
+
+                    <p:column id="moduloObs" sortBy="#{modulo.observacion}" style="width: 300px" filterBy="#{modulo.observacion}" filterMatchMode="contains" filterStyle="display: none; visibility: hidden;"> 
+                        <f:facet name="header">  
+                            <h:outputText value="Observacion" />  
+                        </f:facet> 
+                        <h:outputText value="#{modulo.observacion}" />  
+                    </p:column>
+
+                </p:dataTable>
+            </div>
+
+
         </h:form>
+        <h:form>
+            <div id="d3" style="height: 26px; width: 305px; overflow-x: hidden; position: absolute; left: 290px; top: 26px;" >
+                <p:dataTable id="data4" var="modulo" style="font-size: 11px; width: 600px; position: relative; top: 0px;" value="#{controlRemoto.listModulos}"
+                             rowKey="#{modulo.secuencia}" selection="#{controlRemoto.selectModulo}" selectionMode="single"
+                             widgetVar="data1" styleClass="hide-row-names"
+                             filteredValue="#{controlRemoto.filtradolistModulos}" emptyMessage="No se encontrarón coincidencias.">
+
+                    <p:ajax event="sort" listener="#{controlRemoto.recargar()}" />  
+
+                    <p:column id="moduloNombre" headerText="Nombre_Modulo" sortBy="#{modulo.nombre}" style="width: 310px" filterBy="#{modulo.nombre}" filterMatchMode="contains" filterStyle="display: none; visibility: hidden;"> 
+                        <f:facet name="header">  
+                            <h:outputText value="Nombre Módulo" />  
+                        </f:facet>
+                    </p:column>  
+
+                    <p:column id="moduloObs" sortBy="#{modulo.observacion}" style="width: 300px" filterBy="#{modulo.observacion}" filterMatchMode="contains" filterStyle="display: none; visibility: hidden;"> 
+                        <f:facet name="header">  
+                            <h:outputText value="Observacion" />  
+                        </f:facet> 
+                    </p:column>  
+                </p:dataTable>
+            </div> 
+        </h:form>
+
     </h:body>
 </html>
 
