--- a/DesignerRHN/DesignerRHN-war/web/PerTelefono.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/PerTelefono.xhtml
@@ -17,7 +17,6 @@
 
                         <fieldset style="position: absolute; left: 10px; top: 70px; font-size: 10px; width: 645px; height: 320px; border-radius: 10px; ">
                             <legend style="font-size: 13px; color: #14388B"><strong>Telefonos donde ubicar al empleado</strong></legend>
-                            <!-- TABLA EMPLVIGENCIATIPOTRABAJADOR -->
 
                             <p:dataTable id="datosTelefonosPersona" var="telefono" value="#{controlPerTelefonos.listaTelefonos}"
                                          rowKey="#{telefono.secuencia}" rowIndexVar="indice" style="font-size: 10px; border: 1px; text-align: left"                           
@@ -58,7 +57,7 @@
                                             <p:inputText value="#{telefono.tipotelefono.nombre}" id="editarTipoTelefono" style="font-size: 10px; border-radius: 0px; width: 93.5%;text-transform: uppercase"> 
                                                 <p:ajax event="change" />
                                                 <p:ajax event="select" />
-                                                <p:ajax event="dblclick" listener="#{controlPerTelefonos.asignarIndex(indice, '0')}"/>
+                                                <p:ajax event="dblclick" listener="#{controlPerTelefonos.asignarIndex(indice, 0)}"/>
                                             </p:inputText>
                                         </f:facet>  
                                     </p:cellEditor>
